PL-8382 Fix invisible right border of tables on hi-dpi screens

--- a/modules/web/themes/halo/components/table/table.scss
+++ b/modules/web/themes/halo/components/table/table.scss
@@ -125,6 +125,15 @@
     right: round($v-unit-size/2) - round($v-unit-size/4);
   }
 
+  .#{$primary-stylename}.v-has-width {
+    & > .#{$primary-stylename}-body-wrapper,
+    & > .#{$primary-stylename}-header-wrap,
+    & > .#{$primary-stylename}-footer-wrap {
+      width: 100% !important;
+      @include box-defaults;
+    }
+  }
+
   .v-scrollable > .#{$primary-stylename} {
     overflow: auto;
   }
